[package]
name = "rust_lib_zilpay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
once_cell = "1.19.0"
lazy_static = "1.5.0"
thiserror = "1.0.63"
hex = "0.4.3"
tokio = { version = "1.39.2", features = ["full"] }
zilpay_core = { path = "/Users/rinat/projects/zilpay/zilpay-core" }
