[package]
name = "rust_lib_zilpay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde_json = "1.0.133"
once_cell = "1.19.0"
lazy_static = "1.5.0"
thiserror = "1.0.63"
hex = "0.4.3"
tokio = { version = "1.47.1", features = ["macros"], default-features = false }
zilpay_core = { git = "https://github.com/zilpay/zilpay-core.git", branch = "master" }
# zilpay_core = { path = "/Users/rinat/projects/zilpay/zilpay-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10.8"
aes = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.19.1"
