[package]
name = "rust_lib_zilpay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive", "rc"] }
reqwest = { version = "0.12.23", features = ["rustls-tls", "json", "socks", "gzip", "brotli"], default-features = false }
once_cell = "1.19.0"
lazy_static = "1.5.0"
thiserror = "1.0.63"
hex = "0.4.3"
tokio = { version = "1.47.1", features = ["macros"], default-features = false }
# zilpay_core = { git = "https://github.com/zilpay/zilpay-core.git", branch = "master" }
zilpay_core = { path = "/Users/hicaru/projects/bearby/bearby-core" }
bitcoin = "0.32.8"
secrecy = "0.10.3"
sha2 = "0.11.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
hidapi = "2.6"
btleplug = "0.11"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.19.1"
